[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/LevelGUI.gd" type="Script" id=1]

[node name="LevelGUI" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="LeftBar" type="ColorRect" parent="."]
anchor_bottom = 1.0
margin_right = 80.0

[node name="RightBar" type="ColorRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0

[node name="Start" type="Button" parent="."]
margin_left = 8.0
margin_top = 80.0
margin_right = 72.0
margin_bottom = 144.0
text = "Start"

[node name="Menu" type="Button" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 72.0
margin_bottom = 72.0
text = "Menu"

[node name="Speed" type="Button" parent="."]
margin_left = 8.0
margin_top = 152.0
margin_right = 72.0
margin_bottom = 216.0
text = "1x"

[node name="Car1" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 72.0
text = "Car 1"

[node name="Car2" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -72.0
margin_top = 80.0
margin_right = -8.0
margin_bottom = 144.0
text = "Car 2"

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Speed" to="." method="_on_Speed_pressed"]
[connection signal="pressed" from="Car1" to="." method="_on_Car1_pressed"]
[connection signal="pressed" from="Car2" to="." method="_on_Car2_pressed"]
